[package]
name = "remarkable-oxide"
version = "0.1.0"
authors = ["Sergei Shulepov <s.pepyakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
block-feed = { path = "block-feed" }
async-std = "1.4.0"
env_logger = "0.7.1"
anyhow = "1.0.26"
