[package]
name = "remarkable-oxide"
version = "0.1.0"
authors = ["Sergei Shulepov <s.pepyakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
env_logger = "0.7.1"
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.1.2", features = ["derive"] }
serde = "1.0.104"
serde_json = "1.0.45"
impl-serde = "0.3.0"
async-std = { version = "1.4.0", features = ["attributes"] }
futures = "0.3.1"
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
sdl2 = "0.32.2"
dotenv = "0.15.0"

[profile.release]
debug = true
