[package]
name = "block-feed"
version = "0.1.0"
authors = ["Sergei Shulepov <s.pepyakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] }
env_logger = "0.7.1"
log = "0.4.8"
async-std = "1.4.0"
serde = "1.0.104"
anyhow = "1.0.26"
futures = "0.3.1"
